--- a/resources/Client/index.html
+++ b/resources/Client/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>Demo page</title>
-    <link rel="stylesheet" type="text/css" href="/client/css/styles.css">
-    <script src="/client/js/index.js"></script>
-    <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="/Client/css/styles.css">
+    <script src="/Client/js/index.js"></script>
+    <link rel="shortcut icon" href="/Client/favicon.ico" type="image/x-icon">
 </head>
 
 <body onload="pageLoad()">
