--- a/resources/Client/index.html
+++ b/resources/Client/index.html
@@ -12,8 +12,8 @@
 <div id="content">
     <div id="testDiv"></div>
 </div>
-<h1 style="font-family:'New Times Roman';font-size:50px; color:Black"; align="center";>QuizHub</h1>
-<h2 style="font-family:'New Times Roman';font-size:32px; color:Black"; align="left";>Welcome to a new quiz revision site!</h2>
+<h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align="center";>QuizHub</h1>
+<h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align="left";>Welcome to a new quiz revision site!</h2>
 <div class="box red"></div>
 <form method="get" action="/page2">
     <button onclick="window.location.href = 'http://localhost:8081/client/index.html';">Play a Quiz!</button>
