--- a/resources/Client/index.html
+++ b/resources/Client/index.html
@@ -7,8 +7,22 @@
     <script src="/Client/js/index.js"></script>
     <link rel="shortcut icon" href="/Client/favicon.ico" type="image/x-icon">
 </head>
+<style>
+    #ABC {
+        background-color: blue;
+        height: 30%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
 
-<body onload="pageLoad()" style="background-color:lightgrey">
+    body{
+        background: grey;
+        margin: 0;
+    }
+</style>
+<secton id="ABC"></secton>
 <div id="content">
     <div id="testDiv"></div>
 </div>
