--- a/resources/Client/index.html
+++ b/resources/Client/index.html
@@ -7,37 +7,24 @@
     <script src="/Client/js/index.js"></script>
     <link rel="shortcut icon" href="/Client/favicon.ico" type="image/x-icon">
 </head>
-<style>
-    #ABC {
-        background-color: blue;
-        height: 30%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-    }
 
-    body{
-        background: grey;
-        margin: 0;
-    }
-</style>
-<secton id="ABC"></secton>
+
 <div id="content">
     <div id="testDiv"></div>
 </div>
 <h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align="center";>QuizHub</h1>
 <h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align="left";>Welcome to a new quiz revision site!</h2>
-<div class="box red"></div>
+
 <form method="get" action="/page2">
-    <button onclick="window.location.href = 'http://localhost:8081/client/index.html';">Play a Quiz!</button>
-    <button onclick="window.location.href = 'http://localhost:8081/client/index.html';">New Quizzes</button>
-    <button onclick="window.location.href = 'http://localhost:8081/client/index.html';">Popular Quizzes</button>
-    <button onclick="window.location.href = 'http://localhost:8081/client/index.html';">Your Quizzes</button>
-    <button onclick="window.location.href = 'http://localhost:8081/client/index.html';">Play a Quiz!</button>
-    <button onclick="window.location.href = 'http://localhost:8081/client/index.html';">Login</button>
-    <button onclick="window.location.href = 'http://localhost:8081/client/index.html';">Your Account</button>
+    <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="Play a Quiz" />
+    <input type="button" onclick="location.href='http://google.com';" value="temp button" />
+    <input type="button" onclick="location.href='http://google.com';" value="temp button" />
+    <input type="button" onclick="location.href='http://google.com';" value="temp button" />
+    <input type="button" onclick="location.href='http://google.com';" value="temp button" />
+    <input type="button" onclick="location.href='http://google.com';" value="temp button" />
+    <input type="button" onclick="location.href='http://google.com';" value="temp button" />
 </form>
+<secton id="bottomColour"></secton>
 <!--
 <form>
     <fieldset>
