--- a/resources/Client/playQuiz.html
+++ b/resources/Client/playQuiz.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Play a Quiz!</title>
+    <link rel="stylesheet" type="text/css" href="/Client/css/styles.css">
+    <script src="/Client/js/index.js"></script>
+    <link rel="shortcut icon" href="/Client/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
