--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <title>QuizHub Home Page</title>
-    <link rel="stylesheet" type="text/css" href="/Client/css/styles.css">
-    <script src="/Client/js/index.js"></script>
-    <link rel="shortcut icon" href="/Client/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="/client/css/styles.css">
+    <script src="/client/js/index.js"></script>
+    <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
 <body onload="pageLoad()">
 <div id="content">
@@ -20,12 +20,9 @@
 
 <form method="get" action="/page2">
     <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="Play a Quiz" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="temp button" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="temp button" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="temp button" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="temp button" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="temp button" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="temp button" />
+    <input type="button" onclick="location.href='http://localhost:8081/client/yourQuizzes';" value="Your Quizzes" />
+    <input type="button" onclick="location.href='http://localhost:8081/client/Login';" value="Login" />
+    <input type="button" onclick="location.href='http://localhost:8081/client/yourAccount';" value="View Profile" />
 </form>
 <secton id="bottomColour"></secton>
 
