--- a/resources/client/Login.html
+++ b/resources/client/Login.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
@@ -14,6 +12,6 @@
     <div id="testDiv"></div>
 </div>
 </body>
-
+<secton id="bottomColour"></secton>
 
 </html>
