--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -20,9 +20,9 @@
 
 <form method="get" action="/page2">
     <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="Play a Quiz" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/yourQuizzes';" value="Your Quizzes" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/Login';" value="Login" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/yourAccount';" value="View Profile" />
+    <input type="button" onclick="location.href='http://localhost:8081/client/yourQuizzes.html';" value="Your Quizzes" />
+    <input type="button" onclick="location.href='http://localhost:8081/client/Login.html';" value="Login" />
+    <input type="button" onclick="location.href='http://localhost:8081/client/yourAccount.html';" value="View Profile" />
 </form>
 <secton id="bottomColour"></secton>
 
@@ -47,19 +47,7 @@
             </select>
         </p>
     </fieldset>
-body{
-    background: grey;
-    margin: 0;
-}
-#bottomColour {
-     background-color: orange;
-     height: 50%;
-     position: fixed;
-     top: 65%;
-     left: 0;
-     width: 100%;
- }
-</form>
+
 -->
 
 </body>
