--- a/resources/client/playQuiz.html
+++ b/resources/client/playQuiz.html
@@ -7,7 +7,12 @@
     <script src="/client/js/index.js"></script>
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
-<body>
-
+<body onload="pageLoad()">
+<div id="content">
+    <div id="testDiv"></div>
+</div>
 </body>
+<h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align="left";>Play a Quiz!</h1>
+
+<secton id="bottomColour"></secton>
 </html>
