--- a/resources/client/yourAccount.html
+++ b/resources/client/yourAccount.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
 <body>
+<h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align="center";>Your Account</h1>
 
+
+<secton id="bottomColour"></secton>
 </body>
 </html>
