--- a/resources/client/yourQuizzes.html
+++ b/resources/client/yourQuizzes.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
 <body>
-
+<secton id="bottomColour"></secton>
 </body>
+
 </html>
