--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -16,39 +16,16 @@
 </body>
 
 <h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align="center";>QuizHub</h1>
-<h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align="left";>Welcome to a new quiz revision site!</h2>
+<h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align="center";>Welcome to a new quiz revision site!</h2>
 
 <form method="get" action="/page2">
     <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="Play a Quiz" />
     <input type="button" onclick="location.href='http://localhost:8081/client/yourQuizzes.html';" value="Your Quizzes" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/Login.html';" value="Login" />
+    <input type="button" onclick="location.href='http://localhost:8081/client/login.html';" value="Login" />
     <input type="button" onclick="location.href='http://localhost:8081/client/yourAccount.html';" value="View Profile" />
 </form>
 <secton id="bottomColour"></secton>
 
-
-<!--
-<form>
-    <fieldset>
-        <legend>What would you like to do?</legend>
-        <p>
-            <label>Quizzes</label>
-            <select id = "myList">
-                <option value = "1"><a style="font-family:'New Times Roman';font-size:15px"; href="https://www.google.com/">Login</a></option>
-                <option value = "2">Newly Created</option>
-                <option value = "3">Your quizzes</option>
-                <option value = "4">Computer Science</option>
-                <option value = "5">Maths</option>
-                <option value = "6">English</option>
-                <option value = "7">History</option>
-                <option value = "8">Politics</option>
-                <option value = "9">Science</option>
-
-            </select>
-        </p>
-    </fieldset>
-
--->
 
 </body>
 
