--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -9,23 +9,24 @@
     <script src="/client/js/index.js"></script>
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
-<body onload="pageLoad()">
 <div id="content">
     <div id="testDiv"></div>
 </div>
 </body>
 
-<h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align="center";>QuizHub</h1>
-<h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align="center";>Welcome to a new quiz revision site!</h2>
+<p STYLE="border-style: solid; height:100px;" ><body onload="image1()"></body></p>
+<h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align=center>QuizHub</h1>
+<h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align=center>Welcome to a new quiz revision site!</h2>
 
 <form method="get" action="/page2">
-    <input type="button" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="Play a Quiz" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/yourQuizzes.html';" value="Your Quizzes" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/login.html';" value="Login" />
-    <input type="button" onclick="location.href='http://localhost:8081/client/yourAccount.html';" value="View Profile" />
+    <section id="buttonPosition"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="Play a Quiz" /></section>
+    <section id="buttonPosition1"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/yourQuizzes.html';" value="Your Quizzes" /></section>
+    <section id="buttonPosition2"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/login.html';" value="Login" /></section>
+    <section id="buttonPosition3"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/yourAccount.html';" value="View Profile" /></section>
 </form>
 <secton id="bottomColour"></secton>
-
+<secton id="topBoarder"></secton>
+<section id="button"></section>
 
 </body>
 
