--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -14,7 +14,7 @@
 </div>
 </body>
 
-<p STYLE="border-style: solid; height:100px;" ><body onload="image1()"></body></p>
+<p STYLE="border-style: solid; height:100px;" ><body onload="logos()"></body></p>
 <h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align=center>QuizHub</h1>
 <h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align=center>Welcome to a new quiz revision site!</h2>
 
