--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -6,11 +6,12 @@
     <meta charset="UTF-8">
     <title>QuizHub Home Page</title>
     <link rel="stylesheet" type="text/css" href="/client/css/styles.css">
-    <script src="/client/js/index.js"></script>
+    <script src="/client/js/js.cookie.js"></script>
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
 <div id="content">
     <div id="testDiv"></div>
+    <div id="loggedInDetails"></div>
 </div>
 </body>
 
