--- a/resources/client/playQuiz.html
+++ b/resources/client/playQuiz.html
@@ -12,7 +12,10 @@
     <div id="testDiv"></div>
 </div>
 </body>
+<p STYLE="border-style: solid; height:100px;" ><body onload="logos()"></body>
 <h1 style="font-family:'New Times Roman',serif; font-size:50px; color:Black" align="left";>Play a Quiz!</h1>
-
 <secton id="bottomColour"></secton>
+
+
+
 </html>
