--- a/resources/client/yourQuizzes.html
+++ b/resources/client/yourQuizzes.html
@@ -10,5 +10,7 @@
 <body>
 <secton id="bottomColour"></secton>
 </body>
+<p STYLE="border-style: solid; height:100px;" ><body onload="logos()"></body>
+<h1 style="font-family:'New Times Roman',serif; font-size:50px; color:Black" align="left";>Play a Quiz!</h1>
 
 </html>
