--- a/resources/client/index.html
+++ b/resources/client/index.html
@@ -14,14 +14,14 @@
     <div id="loggedInDetails"></div>
 </div>
 <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a class="active" href="http://localhost:8081/client/index.html">Home</a>
+    <a href="#news">Unknown</a>
+    <a href="#contact">Unknown</a>
+    <a href="#about">Unknown</a>
 </div>
 </body>
-<body onLoad="logos()"></body>
-<p STYLE="border-style: solid; height:100px;" ></p>
+
+<h1> </h1>
 <h1 style="font-family:'New Times Roman',serif;font-size:50px; color:Black" align=center>QuizHub</h1>
 <h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align=center>Welcome to a new quiz revision site!</h2>
 <form method="get" action="/page2">
