--- a/resources/client/playQuiz.html
+++ b/resources/client/playQuiz.html
@@ -12,8 +12,18 @@
     <div id="testDiv"></div>
 </div>
 </body>
-<p STYLE="border-style: solid; height:100px;" ><body onload="logos()"></body>
-<h1 style="font-family:'New Times Roman',serif; font-size:50px; color:Black" align="left";>Play a Quiz!</h1>
+<div class="topnav">
+    <a class="active" href="http://localhost:8081/client/index.html">Home</a>
+    <a href="#news">Unknown</a>
+    <a href="#contact">Unknown</a>
+    <a href="#about">Unknown</a>
+</div>
+<h1></h1>
+<h1 style="font-family:'New Times Roman',serif; font-size:50px; color:Black" align="center";>Play a Quiz!</h1>
+<h2 style="font-family:'New Times Roman',serif; font-size:20px; color:Black" align="Left";>Please select the quizzes below picked from a random selection:</h2>
+
+
+
 <secton id="bottomColour"></secton>
 
 
