--- a/resources/client/login.html
+++ b/resources/client/login.html
@@ -15,7 +15,7 @@
 <secton id="bottomColour"></secton>
 
 <head>
-    <title>Demo page</title>
+    <title>Login Page</title>
     <link rel="stylesheet" type="text/css" href="/client/css/styles.css">
     <script src="/client/js/js.cookie.js"></script>
     <script src="/client/js/login.js"></script>
