--- a/resources/client/playQuiz.html
+++ b/resources/client/playQuiz.html
@@ -8,7 +8,6 @@
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
 
-</body>
 <div class="topnav">
     <a class="active" href="http://localhost:8081/client/index.html">Home</a>
     <a href="#news">Unknown</a>
@@ -16,22 +15,14 @@
     <a href="#about">Unknown</a>
 </div>
 <h1></h1>
-<h1 style="font-family:'New Times Roman',serif; font-size:50px; color:Black" align="center";>Play a Quiz!</h1>
-<h2 style="font-family:'New Times Roman',serif; font-size:20px; color:Black" align="left";>Please select the quizzes below picked from a random selection:</h2>
+<h1 style="font-family:'New Times Roman',serif; font-size:50px; color:Black" align="center">Play a Quiz!</h1>
+<h2 style="font-family:'New Times Roman',serif; font-size:20px; color:Black" align="left">Please select the quizzes below picked from a random selection:</h2>
 
 <body onload="pageLoad()">
-<form id="quizSelection">
-    <div id="content">
-        <label id="listDiv"></label>
-        <input type="button" style="height:20px; width:100px" onclick="location.href='https://www.google.co.uk/';" value="Play a Quiz" />
-    </div>
-</form>
+    <div id="content"></div>
+        <div id="listDiv"></div>
+
 </body>
-
-
-
-
-
 
 <secton id="bottomColour"></secton>
 </html>
