--- a/resources/client/playQuiz.html
+++ b/resources/client/playQuiz.html
@@ -10,18 +10,15 @@
 
 <div class="topnav">
     <a class="active" href="http://localhost:8081/client/index.html">Home</a>
-    <a href="#news">Unknown</a>
-    <a href="#contact">Unknown</a>
-    <a href="#about">Unknown</a>
+
 </div>
 <h1></h1>
 <h1 style="font-family:'New Times Roman',serif; font-size:50px; color:Black" align="center">Play a Quiz!</h1>
-<h2 style="font-family:'New Times Roman',serif; font-size:20px; color:Black" align="left">Please select the quizzes below picked from a random selection:</h2>
+<h2 style="font-family:'New Times Roman',serif; font-size:20px; color:Black" align="left">Please select one of the quizzes below to begin playing:</h2>
 
 <body onload="pageLoad()">
     <div id="content"></div>
         <div id="listDiv"></div>
-
 </body>
 
 <secton id="bottomColour"></secton>
