--- a/resources/client/loadQuiz.html
+++ b/resources/client/loadQuiz.html
@@ -2,14 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Playing Quiz</title>
+    <title>Play a Quiz!</title>
+    <link rel="stylesheet" type="text/css" href="/client/css/styles.css">
+    <script src="/client/js/loadQuiz.js"></script>
+    <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="topnav">
     <a class="active" href="http://localhost:8081/client/index.html">Home</a>
-    <a href="#news">Unknown</a>
-    <a href="#contact">Unknown</a>
-    <a href="#about">Unknown</a>
 </div>
+<body onload="loadQuiz()">
+<h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align=center>Question here</h2>
+    <secton id="bottomColour"></secton>
+    <section id="button"></section>
+
+<form id="listDiv">
+    <section id="answerPosition"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="Answer 1" /></section>
+    <section id="answerPosition2"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/login.html';" value="Answer 2" /></section>
+</form>
+<form>
+    <section id="answerPosition3"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/yourAccount.html';" value="Answer 3" /></section>
+    <section id="answerPosition4"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/yourAccount.html';" value="Answer 4" /></section>
+</form>
+
+
+</body>
 </body>
 </html>
