--- a/resources/client/loadQuiz.html
+++ b/resources/client/loadQuiz.html
@@ -8,16 +8,19 @@
     <link rel="shortcut icon" href="/client/favicon.ico" type="image/x-icon">
 </head>
 <body onload="pageLoad()">
+    <div id="content"></div>
+     <div id="listName"></div>
 <div class="topnav">
     <a class="active" href="http://localhost:8081/client/index.html">Home</a>
 </div>
 
-<h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align=center>Question here</h2>
+<h2 style="font-family:'New Times Roman',serif;font-size:32px; color:Black" align=center><div id="listDiv"></div></h2>
     <secton id="bottomColour"></secton>
     <section id="button"></section>
 
 <form>
-    <div id="listDiv"></div>
+    <section id="answerPosition"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/playQuiz.html';" value="Answer 1" /></section>
+    <section id="answerPosition2"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/login.html';" value="Answer 2" /></section>
 </form>
 <form>
     <section id="answerPosition3"><input type="button" style="height:50px; width:100px" onclick="location.href='http://localhost:8081/client/yourAccount.html';" value="Answer 3" /></section>
